# UX570-Importer

./: .gitignore  README.md  config.yaml  dvr-import.py  dvr_gui.py  pyproject.toml
debian/: changelog  control  copyright  rules
notes/: device-info.md  sony-ux570-metadata-reference.md
src/ux570_importer/: __init__.py  checksum.py  core.py  utils.py
src/ux570_importer/gui/: __init__.py  first_run_wizard.py  main_window.py  settings_dialog.py
